# Sharp-Blaze

./: .gitignore  README.md  bot_implementation_plan.md  docker-compose.yml  references.txt  requeriments_2.txt  thread_test.cpp
AI-deployment/test/: main.ipynb  main.py
docs/screenshots/: .gitkeep
src/broker/: Dockerfile  app.py  brokerServer.py  dockerMatchSpawner.py  matchSpawner.py  stubMatchSpawner.py
src/client/: main.py  requirements.txt
src/client/engine/: camera.py  world.py
src/client/entities/: bomb.py  projectile.py  structures.py  units.py
src/client/ia/: README_LP_solution.md  __init__.py  bot_ai.py  bot_config.py  bot_controller.py  bot_game_loop.py  bot_integration_plan.md  bot_network.py  bot_network_client.py  bot_player.py  bot_state.py  decision_engine.py  easy_bot.py  game_config_loader.py  game_state_analyzer.py  simplex_optimizer.py  test_bot_network.py  test_bot_state.py  test_lobby_import.py  unit_commander.py
src/client/network/: network.py  receive_XML.py
src/client/ui/: arcade_lobby_screen.py  arcade_setup_screen.py  bot_difficulty_screen.py  component.py  conecting_screen.py  connection_screen.py  floating_shapes.py  game_screen.py  host_screen.py  join_screen.py  lobby_screen.py  main_screen.py  minimap.py  pause_overlay.py  shop.py  telemetry.py  tutorial_overlay.py
src/client/utils/: audio.py  config.py  json.py  xml.py
src/config/: README.md  arcade_config.json  bot_ai_config.json  combat_stats.json
src/server/: Dockerfile  main.cpp
src/server/Makefile/: CMakeLists.txt  CMakePresets.json
(+47 files in other folders)
